--- a/src/css/local.less
+++ b/src/css/local.less
@@ -193,7 +193,7 @@
             }
 
             .cs-topper {
-                color: var(--primaryLight)
+                color: var(--primary)
             }
 
             .cs-title, .cs-text, .cs-h3, .cs-flex-p, .cs-name {
@@ -407,7 +407,7 @@
             }
 
             .cs-topper {
-                color: var(--primaryLight)
+                color: var(--primary)
             }
 
             .cs-title, .cs-text, .cs-h3, .cs-flex-p, .cs-name {
