--- a/src/css/root.less
+++ b/src/css/root.less
@@ -392,8 +392,8 @@
 
         // Navbar Menu Open State
         #navbar-menu.open {
-            height: 356/16rem;
-            padding-top: 20/16rem;
+            height: 294/16rem;
+            padding-top: 36/16rem;
             z-index: -100;
 
             ul {
@@ -645,7 +645,7 @@
                         a {
                             color: #fff;
                             &:before {
-                                background: var(--accent);
+                                background: #fcfcfc96;
                             }
 
                             &.active {
@@ -683,7 +683,7 @@
                         a {
                             color: #fff;
                             &:before {
-                                background: var(--accent);
+                                background: #fcfcfc96;
                             }
 
                             &.active {
