--- a/src/css/root.css
+++ b/src/css/root.css
@@ -335,8 +335,8 @@
     z-index: -1;
   }
   #navigation #navbar-menu.open {
-    height: 22.25rem;
-    padding-top: 1.25rem;
+    height: 18.375rem;
+    padding-top: 2.25rem;
     z-index: -100;
   }
   #navigation #navbar-menu.open ul li {
@@ -502,7 +502,7 @@
     color: #fff;
   }
   body.dark-mode #navigation #navbar-menu ul li a:before {
-    background: var(--accent);
+    background: #fcfcfc96;
   }
   body.dark-mode #navigation #navbar-menu ul li a.active {
     color: var(--primary);
@@ -523,7 +523,7 @@
     color: #fff;
   }
   body.dark-mode #navigation #navbar-menu ul li a:before {
-    background: var(--accent);
+    background: #fcfcfc96;
   }
   body.dark-mode #navigation #navbar-menu ul li a.active {
     color: var(--primary);
