--- a/src/_layouts/base.html
+++ b/src/_layouts/base.html
@@ -65,6 +65,7 @@
         <script defer src="/assets/js/nav.js"></script>
         <script defer src="/assets/js/dark.js"></script>
         <script defer src="/assets/js/fvf.js"></script>
+        <script defer src="/assets/js/newsletter.js"></script>
 
         <!--
         This script adds a class to the body after scrolling 100px
