--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -17,6 +17,7 @@
                     <span><i class="fab fa-twitter"></i></span>
                 </a>
             </div>
+            <a href ="https://www.facebook.com/groups/247942571904269/ " class = "smethport">You Might Be From Smethport...</a>
         </div>
         <div class="right-section">
             <div class="lists">
