--- a/src/css/root.css
+++ b/src/css/root.css
@@ -710,6 +710,17 @@
     background-color: #46c1f6;
     color: #ffffff;
   }
+  #footer .left-section .smethport {
+    text-decoration: none;
+    font-size: 1rem;
+    line-height: 1.92857143;
+    color: #4da7db;
+    opacity: .9;
+    text-align: center;
+    width: 100%;
+    margin: auto;
+    text-decoration: underline;
+  }
   #footer .right-section {
     width: 96%;
     max-width: 25.4375rem;
