--- a/src/css/root.less
+++ b/src/css/root.less
@@ -835,6 +835,7 @@
                 text-align: center;
                 width: 100%;
                 margin: auto;
+
             }
 
             .wrapper{
@@ -902,6 +903,18 @@
                     }
                 
                 
+            }
+
+            .smethport{
+                text-decoration: none;
+                font-size: (16/16rem);
+                line-height: 27/14;
+                color: #4da7db;
+                opacity: .9;
+                text-align: center;
+                width: 100%;
+                margin: auto;
+                text-decoration: underline;
             }
         }
 
