adding my accidental investigation

--- a/src/_includes/footer.html
+++ b/src/_includes/footer.html
@@ -29,7 +29,13 @@
                         <a href="/">Home</a>
                     </li>
                     <li>
+                        <a href="/books">Books</a>
+                    </li>
+                    <li>
                         <a href="/myafterlife">My Afterlife</a>
+                    </li>
+                    <li>
+                        <a href="/my-accidental-investigation">My Accidental Investigation</a>
                     </li>
                     <li>
                         <a href="/events">Events</a>
